[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raman_hypmap"
version = "0.0.6"
authors = [{ name="A Goodwin"},]

description = "Raman hyperspectral processing for Horiba instrument"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",]

[project.urls]
"Homepage" = "https://github.com/ag00dwin/raman_hypmap"
"Bug Tracker" = "https://https://github.com/ag00dwin/raman_hypmap/tree/main/.github/issues%20and%20feature%20request"


